# corrosion-dns

./: Cargo.toml  Cargo.toml.workspace  Dockerfile  Dockerfile.test  README.md  corrosion-dns.example.toml  docker-compose.yml
.github/workflows/: ci.yml  release.yml
assets/: architecture.mmd  dns-flow.mmd
config/: corrosion-dns.toml  corrosion.toml  prometheus.yml  schema.sql  unbound.conf
src/: authority.rs  config.rs  error.rs  lib.rs  metrics.rs  server.rs  state.rs  subscription.rs  telemetry.rs
tests/: group_filter_catalog.rs  group_filter_loopback.rs
tests/common/: mod.rs
