# Standalone Cargo.toml for corrosion-dns
# Use this when extracting the crate outside the Corrosion workspace.
# Copy this to Cargo.toml and adjust versions as needed.

[package]
name = "corrosion-dns"
version = "0.1.0"
description = "DNS server backed by Corrosion distributed state"
edition = "2021"
license = "MIT"
repository = "https://github.com/superfly/corrosion"

[[bin]]
name = "corrosion-dns"
path = "src/bin/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Concurrency
parking_lot = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Corrosion client (superfly/corrosion at commit matching psviderski:latest)
# psviderski/corrosion:latest is based on this commit from upstream
corro-client = { git = "https://github.com/superfly/corrosion.git", rev = "8fd00b8" }
corro-api-types = { git = "https://github.com/superfly/corrosion.git", rev = "8fd00b8" }
tripwire = { git = "https://github.com/superfly/corrosion.git", rev = "8fd00b8" }

# DNS server
hickory-server = "0.25"
hickory-proto = "0.25"

# HTTP client (needed for corro-client errors)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.17", optional = true }

# Config
clap = { version = "4", features = ["derive"] }
config = "0.13"

# OpenTelemetry (optional)
opentelemetry = { version = "0.29", optional = true }
opentelemetry-otlp = { version = "0.29", optional = true, features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.29", optional = true, features = ["rt-tokio"] }
opentelemetry-semantic-conventions = { version = "0.29", optional = true }
tracing-opentelemetry = { version = "0.30", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
eyre = "0.6"

# IMPORTANT: After copying to standalone location:
# 1. Remove tests/integration.rs (requires corro-agent which is workspace-only)
# 2. Run: cargo update time@0.3.47 --precise 0.3.36 (if using Rust < 1.88)
# 3. Unit tests will work: cargo test --lib

[features]
default = ["prometheus"]
prometheus = ["metrics-exporter-prometheus"]
integration-loopback = []  # gates Tier 2 loopback tests (needs root + Linux)
otel = [
    "opentelemetry",
    "opentelemetry-otlp",
    "opentelemetry_sdk",
    "opentelemetry-semantic-conventions",
    "tracing-opentelemetry",
]
